svc-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    appname: nginxapp
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http-web-svc
