pod-test.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxapp-svc
spec:
  selector:
    appname: nginxappp
  ports:
  - name: nginxapp
    protocol: TCP
    port: 80
    targetPort: http-web-svc
