ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxapp-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nginxapp-svc
            servicePort: nginxapp
